--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/config-lerna-scopes": "^16.0.0",
-    "@patternfly/eslint-config-elements": "^0.0.1",
+    "@patternfly/create-element": "^0.0.2-next.0",
+    "@patternfly/eslint-config-elements": "^0.0.2-next.0",
     "@patternfly/pfe-tools": "next || ^0.0.1",
     "commitlint": "^16.1.0",
     "cpx": "^1.5.0",
@@ -66,6 +67,7 @@
     "lerna": "^4.0.0",
     "npm-merge-driver": "^2.3.6",
     "open": "^8.0.4",
+    "patch-package": "^6.4.7",
     "renamer": "^4.0.0",
     "sassdoc": "^2.7.3"
   },
