--- a/package.json
+++ b/package.json
@@ -55,9 +55,9 @@
     "@commitlint/cli": "^16.1.0",
     "@commitlint/config-conventional": "^16.0.0",
     "@commitlint/config-lerna-scopes": "^16.0.0",
-    "@patternfly/create-element": "^0.0.2-next.0",
-    "@patternfly/eslint-config-elements": "^0.0.2-next.0",
-    "@patternfly/pfe-tools": "next || ^0.0.1",
+    "@patternfly/create-element": "^1.0.0-next.7",
+    "@patternfly/eslint-config-elements": "^0.0.2-next.2",
+    "@patternfly/pfe-tools": "^0.1.0-next.9",
     "commitlint": "^16.1.0",
     "cpx": "^1.5.0",
     "custom-elements-manifest": "^1.0.0",
