--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@commitlint/config-lerna-scopes": "^16.0.0",
     "@patternfly/create-element": "^1.0.0-next.7",
     "@patternfly/eslint-config-elements": "^0.0.2-next.2",
+    "@patternfly/pfe-band": "^2.0.0-next.0",
+    "@patternfly/pfe-sass": "^2.0.0-next.4",
     "@patternfly/pfe-tools": "^0.1.0-next.9",
     "commitlint": "^16.1.0",
     "cpx": "^1.5.0",
